@@ -1,3 +1,9 @@
+2005-01-14  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgconf-client.c: GConf::Client.new is deprecated.
+	Call rb_warn instead rb_warning. So it print warning message 
+	everytime to call.
+
 2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/lib/gconf2.rb: Support GLib::Log.set_log_domain.
@@ -119,7 +125,7 @@
 2002-11-17  Nikolai :: lone-star :: Weibull <lone-star@home.se>
 
 	* src/*.[ch]: Updated headers to be more CVS-like using $Author: mutoh $
-	and $Date: 2004/09/23 00:45:17 $ macros.
+	and $Date: 2005/01/13 15:18:06 $ macros.
 
 2002-11-14  Nikolai :: lone-star :: Weibull <lone-star@home.se>
 
